# mapreducehs

./: .gitignore  CHANGELOG.md  default.nix  flake.nix  mapreduce.cabal  readme.md  result
src/: Client.hs  Impl.hs  ImplServer.hs  ImplWorker.hs  Local.hs  Main.hs  Server.hs  Worker.hs  out.txt
src/Core/: Client.hs  Context.hs  Logging.hs  MapReduceC.hs  Partition.hs  Serialize.hs  Server.hs  Signal.hs  Std.hs  Store.hs  Type.hs  Util.hs  Worker.hs
test/: Generator.hs  Test.hs
