cabal-version:      2.4
name:               mapreduce
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             soulomoon
maintainer:         fwy996602672@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md



executable Worker
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options: -Wall
  other-modules:   
    Core.MapReduceC
    Core.Partition
    Core.Util
    Core.Serialize
    Core.Context
    Core.Type
    Core.Std
    Core.Store
    Impl
  build-depends:
      base            >=4.12  && <5
    , text
    , mtl
    , containers
    -- , lens
    , hashable
    , directory
    , network
    , bytestring
    , binary
  main-is: Worker.hs


executable Local
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options: -Wall
  other-modules:   
    Core.MapReduceC
    Core.Partition
    Core.Util
    Core.Serialize
    Core.Context
    Core.Type
    Core.Std
    Core.Store
    Core.Logging
    Impl
  build-depends:
      base            >=4.12  && <5
    , text
    , mtl
    , containers
    -- , lens
    , hashable
    , directory
    , network
    , bytestring
    , binary
  main-is: Local.hs

executable Server
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options: -Wall
  other-modules:   
    Core.MapReduceC
    Core.Partition
    Core.Util
    Core.Serialize
    Core.Context
    Core.Type
    Core.Std
    Core.Store
    Core.Logging
    Impl
  build-depends:
      base            >=4.12  && <5
    , text
    , mtl
    , containers
    -- , lens
    , hashable
    , directory
    , network
    , bytestring
    , binary
  main-is: Server.hs

Test-Suite Test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test, src
  ghc-options: -Wall
  other-modules: 
    Core.MapReduceC
    Core.Partition
    Core.Util
    Core.Serialize
    Core.Context
    Core.Type
    Core.Std
    Core.Store
    Core.Logging
    Impl
  build-depends:
      base            >=4.12  && <5
    , text
    , mtl
    , containers
    , hashable
    , directory
    , bytestring
    , binary
    , HUnit >= 1.3
    , QuickCheck 
    , network
    , tasty
    , tasty-quickcheck
    , tasty-hunit,
  main-is: Test.hs
